--- a/UserService/user-service/src/main/resources/application.properties
+++ b/UserService/user-service/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.security.enabled=false
 
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
